--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
 theme: jekyll-theme-minimal
-title: Vikram 
-description: Bookmark this to keep an eye on my project updates!
+title: Vikram Manikantan
